--- a/source/posts/2012-07-25.md
+++ b/source/posts/2012-07-25.md
@@ -5,27 +5,27 @@
 ![center](http://4.bp.blogspot.com/_3RaT_8-tQ5c/SGQOkXRsvoI/AAAAAAAAFLg/ZUPLSr8mp_w/s400/whale_bottlenose.gif)
 
 
-<div style="float: right;"><a href="http://img-fotki.yandex.ru/get/6601/9320383.7/0_7ad92_e8d156b6_orig"><img src="http://img-fotki.yandex.ru/get/6601/9320383.7/0_7ad92_e8d156b6_XS" border=0/></a></div>
+<div style="float: right; margin: 5px;"><a href="http://img-fotki.yandex.ru/get/6601/9320383.7/0_7ad92_e8d156b6_orig"><img src="http://img-fotki.yandex.ru/get/6601/9320383.7/0_7ad92_e8d156b6_XS" border=0/></a></div>
 
 Собственно первая страница сервиса не предвещала сюрпризов: большая и удобная поисковая строка. Сверху список слоганов сервиса, снизу, как вы видите, большой набор трендовых слов для поиска. Уже с этой точки видно, что поиск в первую очередь по социальному, в частности по твиттеру. Обилие хештегов в "трендах" поражает, конечно.
 
-<div style="float: left;"><a href="http://img-fotki.yandex.ru/get/6500/9320383.7/0_7ad93_7ab99870_orig"><img src="http://img-fotki.yandex.ru/get/6500/9320383.7/0_7ad93_7ab99870_XS" border=0/></a></div>
+<div style="float: left;margin: 5px;"><a href="http://img-fotki.yandex.ru/get/6500/9320383.7/0_7ad93_7ab99870_orig"><img src="http://img-fotki.yandex.ru/get/6500/9320383.7/0_7ad93_7ab99870_XS" border=0/></a></div>
 
 Я всегда пробую новые поисковики на слове "yandex", это позволяет узнать много интересного. Например, в данном случае я вижу, что ранжирование в поиске очень своеобразное. По сути мне показали новости про яндекс за последнюю неделю, отсортированные по популярности в твиттере. А еще нам отдельно показали тренды, упоминаемые вместе с этим словом, последние ссылки из твитов с этим словом и вообще последние твиты с ним же.
 
-<div style="float: right;"><a href="http://img-fotki.yandex.ru/get/6602/9320383.7/0_7ad94_2e9d19_orig"><img src="http://img-fotki.yandex.ru/get/6602/9320383.7/0_7ad94_2e9d19_XS" border=0/></a></div>
+<div style="float: right;margin: 5px;"><a href="http://img-fotki.yandex.ru/get/6602/9320383.7/0_7ad94_2e9d19_orig"><img src="http://img-fotki.yandex.ru/get/6602/9320383.7/0_7ad94_2e9d19_XS" border=0/></a></div>
 
 У поисковой страницы есть разные визуализации. Вот например Paper, т.е. газетный формат. По сути это те же самые статьи в том же ранжировании. Но выглядит это совсем иначе, больше всего напоминает twittedtim.es или paper.ly, только не персональный, а поисковый. Хорошее, качественное решение, тем более что присутствует не только текст, но и "главная картинка" из этой новости или статьи.
 
-<div style="float: left;"><a href="http://img-fotki.yandex.ru/get/6402/9320383.7/0_7ad95_5ad24aea_orig"><img src="http://img-fotki.yandex.ru/get/6402/9320383.7/0_7ad95_5ad24aea_XS" border=0/></a></div>
+<div style="float: left;margin: 5px;"><a href="http://img-fotki.yandex.ru/get/6402/9320383.7/0_7ad95_5ad24aea_orig"><img src="http://img-fotki.yandex.ru/get/6402/9320383.7/0_7ad95_5ad24aea_XS" border=0/></a></div>
 
 Еще одна визуализация, Sonar, очень любопытная, показывает этакое дерево понятий, связанных с твоим запросом. Судя по всему, это банально самые часто встречающиеся слова в статьях, ссылки на которые он нашел в твиттере. Ну, в общем-то это тоже не плохо. В правой части экрана просто выдача из поиска по твиттеру, отсортированная по времени.
 
-<div style="float: right;"><a href="http://img-fotki.yandex.ru/get/6402/9320383.7/0_7ad96_43d359a4_orig"><img src="http://img-fotki.yandex.ru/get/6402/9320383.7/0_7ad96_43d359a4_XS" border=0/></a></div>
+<div style="float: right;margin: 5px;"><a href="http://img-fotki.yandex.ru/get/6402/9320383.7/0_7ad96_43d359a4_orig"><img src="http://img-fotki.yandex.ru/get/6402/9320383.7/0_7ad96_43d359a4_XS" border=0/></a></div>
 
 Интересно, что поисковый сервис по факту логина превращается в нормальный, а точнее ненормальный твиттерный клиент. В левой части - удобный доступ к твоим потокам твиттера. В правой всё то же, что было на "поисковике", только персонализированное для тебя. Тут и список самых популярных среди тебя статей за сегодня, и последние ссылки в твоем твиттере и точная копия пейперли в газетном режиме. Красота!
 
-<div style="float: left;"><a href="http://img-fotki.yandex.ru/get/6404/9320383.7/0_7ad97_1d6525cb_orig"><img src="http://img-fotki.yandex.ru/get/6404/9320383.7/0_7ad97_1d6525cb_XS" border=0/></a></div>
+<div style="float: left;margin: 5px;"><a href="http://img-fotki.yandex.ru/get/6404/9320383.7/0_7ad97_1d6525cb_orig"><img src="http://img-fotki.yandex.ru/get/6404/9320383.7/0_7ad97_1d6525cb_XS" border=0/></a></div>
 
 А еще тут у нас присутствует самое-самое начало конкурента Prismatic. Потому что в режиме "интересы" вам показываются "другие ссылки по вашей теме", с учетом твоих интересов и (как я понял) интересов твоих бутылконосящих френдов.
 
