--- a/source/posts/2012-07-25.md
+++ b/source/posts/2012-07-25.md
@@ -48,7 +48,7 @@
 ## Для гиков
 * [Веселое описание свежей дыры с DNS Poisoning в Android 4.0.4 и ниже](http://blog.watchfire.com/wfblog/2012/07/android-dns-poisoning-randomness-gone-bad-cve-2012-2808.html). С картинками и так просто, что даже такой дебил как я всё понял. #security #mobile
 * [В свежем Firefox Aurora уже отменены префиксы](http://hacks.mozilla.org/2012/07/aurora-16-is-out/). Почти всё что было *-moz-что-то* теперь просто *-что-то*, как и советовали мудрые парни из [WHATWG](http://addmeto.cc/post/2012-07-24/). Ну и почитайте в этой же статье о других изменениях тоже. #firefox #browser
-* [Xamarin получила еще 12М на создание средст разработки на C# для iOS и Android](http://blog.xamarin.com/2012/07/24/xamarin-raises-12m-to-help-you-make-better-apps-faster/). Совершенно фанатичные ребята, преданные делу C# и толкающие это дело вперед. По-доброму завидую. #csharp #mobile
+* [Xamarin получила еще 12М на создание средств разработки на C# для iOS и Android](http://blog.xamarin.com/2012/07/24/xamarin-raises-12m-to-help-you-make-better-apps-faster/). Совершенно фанатичные ребята, преданные делу C# и толкающие это дело вперед. По-доброму завидую. #csharp #mobile
 * [Вот, кстати, неплохие рекомендации как портировать приложение из WP7 в iOS](http://damianblog.com/2012/07/24/porting-a-windows-phone-app-to-ios/) через MonoTouch. Варварский метод, конечно, но куда деваться. #ios #monotouch
 * [Как один хитрый разработчик сдатамайнил иконки 300 приложений и сделал свою](http://friggeri.net/blog/data-mining-color-analysis-tehula-icon/), разумееся с целью сделать "самую продающую иконку". Строго говоря - он тупо сдампил "средний цвет" и использовал его для своей иконки. Но сама идея аппетитная. #mobile
 * [Проивзодители API и OAuth, ну, давайте же!](http://gist.io/3170829). Набор правильных советов для тех, кто использует OAuth для авторизации доступа к API сервисов. Опять задумался о том, что у нас кое-что не так. #oauth #api #rules
