--- a/source/posts/2012-07-25.md
+++ b/source/posts/2012-07-25.md
@@ -19,7 +19,7 @@
 
 <div style="float: left;margin: 5px;"><a href="http://img-fotki.yandex.ru/get/6402/9320383.7/0_7ad95_5ad24aea_orig"><img src="http://img-fotki.yandex.ru/get/6402/9320383.7/0_7ad95_5ad24aea_XS" border=0/></a></div>
 
-Еще одна визуализация, Sonar, очень любопытная, показывает этакое дерево понятий, связанных с твоим запросом. Судя по всему, это банально самые часто встречающиеся слова в статьях, ссылки на которые он нашел в твиттере. Ну, в общем-то, это тоже не плохо. В правой части экрана просто выдача из поиска по твиттеру, отсортированная по времени.
+Еще одна визуализация, Sonar, очень любопытная, показывает этакое дерево понятий, связанных с твоим запросом. Судя по всему, это банально самые часто встречающиеся слова в статьях, ссылки на которые он нашел в твиттере. Ну, в общем-то, это тоже неплохо. В правой части экрана просто выдача из поиска по твиттеру, отсортированная по времени.
 
 <div style="float: right;margin: 5px;"><a href="http://img-fotki.yandex.ru/get/6402/9320383.7/0_7ad96_43d359a4_orig"><img src="http://img-fotki.yandex.ru/get/6402/9320383.7/0_7ad96_43d359a4_XS" border=0/></a></div>
 
@@ -29,13 +29,13 @@
 
 А еще тут у нас присутствует самое-самое начало конкурента Prismatic. Потому что в режиме "интересы" вам показываются "другие ссылки по вашей теме", с учетом твоих интересов и (как я понял) интересов твоих бутылконосящих френдов.
 
-Это удивительно, как такой развесистый набор функций реализовала маленькая (6 человек) команда, да еще и в стелс режиме, никто раньше этого проекта не видел. А еще для меня это ответ на вопрос "что такое современный социальный поиск". Ответ короткий - "социальный поиск это 90% визуализации и 10% персонализации". Попробуйте сервис. Френдить там никого пока нельзя, но меня там зовут, как и в твиттере - [@bobuk](http://bottlenose.com/twitter/bobuk).
+Это удивительно, как такой развесистый набор функций реализовала маленькая (6 человек) команда, да еще и в стелс-режиме, никто раньше этого проекта не видел. А еще для меня это ответ на вопрос "что такое современный социальный поиск". Ответ короткий: "социальный поиск это 90% визуализации и 10% персонализации". Попробуйте сервис. Френдить там никого пока нельзя, но меня там зовут, как и в твиттере - [@bobuk](http://bottlenose.com/twitter/bobuk).
 
 -----
 
 ## Для всех
 * [Эппл рассказала о своих оборотах за 3 финансовый квартал](http://www.marketwatch.com/story/apple-reports-third-quarter-results-2012-07-24). Отчет неплохой, особенно в цифрах год к году. Рынок на него прореагировал примерно никак. Кто сказал "акции упали"? Отнормируйте по насдаку, сравните результат. #aapl #money
-* [И сегодня же - Эппл добилась-таки запрета продаж SGT7.7](http://arstechnica.com/apple/2012/07/apple-wins-eu-wide-ban-on-galaxy-tab-7-7-tab-10-1n-not-covered/), причем на этот раз на территории всей Европы. Удивительно, но SGT10.1N эта учесть не постигла, он всё ещё продается в ряде стран. #apple #samsung #ohpleasenotagain
+* [И сегодня же - Эппл добилась-таки запрета продаж SGT7.7](http://arstechnica.com/apple/2012/07/apple-wins-eu-wide-ban-on-galaxy-tab-7-7-tab-10-1n-not-covered/), причем на этот раз на территории всей Европы. Удивительно, но SGT10.1N эта участь не постигла, он всё ещё продается в ряде стран. #apple #samsung #ohpleasenotagain
 * [Craigslist всё же решил судиться с PadMapper](http://gigaom.com/2012/07/24/craigslist-sues-competitor-padmapper-over-listings/). Я вот чего не понимаю, неужели они думали, что PadMapper — это реальный им конкурент, хотя бы на ниве аренды жилья? Маленький же был проект, летящий только в рамках комьюнити стартаперов в долине. #lawyers
 * [Yahoo вернула создателям Koprol их стартап](http://e27.sg/2012/07/24/yahoo-resurrects-indonesias-foursquare-koprol-sign-of-a-more-mayer-ish-approach-to-talent-appreciation/). Видимо, самим не пригодилось. Первый раз вижу такую ситуацию, когда компания-инвестор увольняет создателей проекта и возвращает им бренд. Ладно хоть деньги не потребовали вернуть… #koprol #moneyback
 * [Оказывается, новый google compute engine не так и плох](http://blog.zencoder.com/2012/07/23/first-look-at-google-compute-engine-for-video-transcoding/), по крайней мере, если кодировать на нем видео. Ребята из зенкодера провели живой тест, сравнив его с EC2 и получили хорошие результаты. #zencoder #gce #ec2
