--- a/source/posts/2012-07-27.md
+++ b/source/posts/2012-07-27.md
@@ -31,6 +31,7 @@
 * [Чуваки из Нюанса нашли еще одно применение](http://arstechnica.com/information-technology/2012/07/dragon-pc-software-now-lets-your-voice-control-gmail-and-hotmail/) - специальный сайдбар, позволяющий управлять почтой. Конечно не всей, только gmail и hotmail, но это всё равно круто. #voice #gmail #hotmail
 * Кстати о почте - [AOL обновил почту](http://thenextweb.com/insider/2012/07/26/aol-mail-gets-a-refresh-would-like-to-add-you-as-one-of-its-24m-monthly-active-users/) первый раз за 5 лет. Причем обновление отличное, очень рекомендую всем на него посмотреть. Мне *местами* нравится даже больше новой яндекс.почты, которую вы еще не видели :) #aol #mail
 
+## Вы нам писали
 
 * [Функциональное программирование - это гетто](http://blog.jelastic.com/2012/07/24/functional-programming-is-a-ghetto/). Ну, или башня из слоновой кости, из которой одни разработчики смотрят на дргих как на г..но. [via @amogil](http://github.com/amogil)
 * [Запомнить число пи до миллионой доли очень легко](http://davidbau.com/archives/2010/03/14/the_mystery_of_355113.html). И никто до сих пор не понимает почему. *Хорошая математическая шутка. Она у меня вроде уже была, нет?* [via @amogil](http://github.com/amogil)
