Пунктуация, орфография, скачать бесплатно онлайн

--- a/source/posts/2012-07-27.md
+++ b/source/posts/2012-07-27.md
@@ -9,9 +9,9 @@
 1. Открываем **на мобильном** сайт http://google.com.
 2. Нажимаем на шестеренку настроек, выбираем «Настройки поиска».
 3. Ищем «Рукописный ввод» (в английском интерфейсе Handwriting) и включаем его.
-4. Возвращаемся на гугл и начинаем пальцем по экрану писать слово из трех букв
+4. Возвращаемся на гугл и начинаем пальцем по экрану писать слово из трех букв.
 5. …
-6. <s>профит</s> онемение от восхищения.
+6. <s>Профит</s> онемение от восхищения.
 
 Для ленивых [есть рекламный видеоролик](http://www.youtube.com/watch?v=uyeJXKfAcpc), но он очень рекламный, имейте ввиду. Казалось бы, такая простая ерунда, но для меня это очень крутая маркетинговая штука.
 
@@ -34,19 +34,19 @@
 ## Вы нам писали
 
 * [Функциональное программирование - это гетто](http://blog.jelastic.com/2012/07/24/functional-programming-is-a-ghetto/). Ну, или башня из слоновой кости, из которой одни разработчики смотрят на дргих как на г..но. [via @amogil](http://github.com/amogil)
-* [Запомнить число пи до миллионой доли очень легко](http://davidbau.com/archives/2010/03/14/the_mystery_of_355113.html). И никто до сих пор не понимает почему. *Хорошая математическая шутка. Она у меня вроде уже была, нет?* [via @amogil](http://github.com/amogil)
+* [Запомнить число пи до миллионной доли очень легко](http://davidbau.com/archives/2010/03/14/the_mystery_of_355113.html). И никто до сих пор не понимает почему. *Хорошая математическая шутка. Она у меня вроде уже была, нет?* [via @amogil](http://github.com/amogil)
 * [Бесконечный спор о плюсах и минусах "гибридных" приложений для мобильных](http://www.cocoacontrols.com/posts/a-primer-on-hybrid-apps-for-ios) на примере айфона. [via @ddnv](http://github.com/ddnv)
 * [Небольшое обновление в разработке u1db.](http://packages.python.org/u1db/high-level-api.html#high-level-api) Напомню, что U1DB -- это такой универсальный API от создателей Ubuntu One, которым они заменят текущий CouchDB. К этому API затем будет добавляться различные "реализации" на различных платформах. Пока делают прототип на питоне и SQLite. Уже сейчас можно ознакомиться с документацией их API. Я лично (k-bx) вижу гигантскую проблему в отсутствии стандартных range-запросов в их модели, и попытке всё впихнуть в key-value. А вы? [via @k-bx](http://github.com/k-bx)
 * Если вы ничего не слышали о [Continuous_integration](http://en.wikipedia.org/wiki/Continuous_integration), то [вот тут опубликовали](http://zeroturnaround.com/blog/zt-labs-tutorial-pragmatic-continuous-delivery-with-jenkins-nexus-and-liverebel/) неплохой материал для ознакомления. По ссылке есть небольшое видео и PDF (доступен после регистрации, [direct link](http://yadisk.cc/d/mGgANGXS00_z) для ленивых) [via @melonamin](http://github.com/melonamin)
-* [Доступен для скачивания](http://tfspreview.com) preview TFS - набор инструментов для [управления жизненым циклом ПО](http://en.wikipedia.org/wiki/Application_lifecycle_management) от Microsoft. Из коробки TFS позволяет делать deployment Azure, но что делать если вы используете Amazon EC2? Подробный how-to по [ссылке](http://octopusdeploy.com/blog/automated-deployment-with-tfspreview-octopack-myget) [via @melonamin](http://github.com/melonamin)
+* [Доступен для скачивания](http://tfspreview.com) preview TFS - набор инструментов для [управления жизненным циклом ПО](http://en.wikipedia.org/wiki/Application_lifecycle_management) от Microsoft. Из коробки TFS позволяет делать deployment Azure, но что делать если вы используете Amazon EC2? Подробный how-to по [ссылке](http://octopusdeploy.com/blog/automated-deployment-with-tfspreview-octopack-myget) [via @melonamin](http://github.com/melonamin)
 * Как на самом деле должны были быть сделаны Reminders в iOS - [Checkmark](http://www.macstories.net/reviews/checkmark-review/) А для Android есть что нибудь похожее? [via @melonamin](http://github.com/melonamin)
 * Автор популярных среди гиков [комиксов XKCD](http://xkcd.com) начал вести блог в котором отвечает на вопросы читателей сформулированных в формате "А что если...". Первый пост про [релятивисткий бейсбол](http://what-if.xkcd.com/1/), формат непривычен, но получилось отлично. [via @melonamin](http://github.com/melonamin)
 * Microsoft [выпустила в Open Source](http://weblogs.asp.net/scottgu/archive/2012/07/19/entity-framework-and-open-source.aspx) свой Entity Framework. Всё выложено на [entityframework.codeplex.com](http://entityframework.codeplex.com/), и они используют Git! Ничто человеческое им не чуждо :) #microsoft #opensource [via @mikola](http://github.com/mikola)
-* Статья о том, что [спать надо](http://blogs.hbr.org/schwartz/2012/07/the-secret-to-high-performance.html), иначе вам будет сложно выполнять свою работу. Тема, конечно, не новая и мы все уже много раз об этом читали и слышали. Всё же стоит ещё раз об этом вспомнить и, может быть, хотя бы сегодня лечь вовремя :) #health [via @mikola](http://github.com/mikola)
-* Разработчик из компании Mozilla и 24-летний исследователь безопасности [нашли уязвимость](http://www.forbes.com/sites/andygreenberg/2012/07/23/hacker-will-expose-potential-security-flaw-in-more-than-four-million-hotel-room-keycard-locks/) в замках Onity, которые устанавливают на двери номеров в отелях. Разработанный ими аппарат менее, чем за 50$ (на основе Arduino) способен открывать такие двери. [Слайды](http://demoseen.com/bhtalk2.pdf). [via @p0123n](http://github.com/p0123n)
-* Анализатор паролей [Pipal](http://www.digininja.org/projects/pipal.php). Нет, программа ничего не взамывает, оставляя это старине Джонни. Занимается она анализом уже взломанных паролей. На странице программы автор делится разной интересной статистикой. [via @p0123n](http://github.com/p0123n)
+* Статья о том, что [спать надо](http://blogs.hbr.org/schwartz/2012/07/the-secret-to-high-performance.html), иначе вам будет сложно выполнять свою работу. Тема, конечно, не новая, и мы все уже много раз об этом читали и слышали. Всё же стоит ещё раз об этом вспомнить и, может быть, хотя бы сегодня лечь вовремя :) #health [via @mikola](http://github.com/mikola)
+* Разработчик из компании Mozilla и 24-летний исследователь безопасности [нашли уязвимость](http://www.forbes.com/sites/andygreenberg/2012/07/23/hacker-will-expose-potential-security-flaw-in-more-than-four-million-hotel-room-keycard-locks/) в замках Onity, которые устанавливают на двери номеров в отелях. Разработанный ими аппарат (менее, чем за 50$, на основе Arduino) способен открывать такие двери. [Слайды](http://demoseen.com/bhtalk2.pdf). [via @p0123n](http://github.com/p0123n)
+* Анализатор паролей [Pipal](http://www.digininja.org/projects/pipal.php). Нет, программа ничего не взламывает, оставляя это старине Джонни. Занимается она анализом уже взломанных паролей. На странице программы автор делится разной интересной статистикой. [via @p0123n](http://github.com/p0123n)
 * Подскажите, какой у вас пароль? Чувак [провёл эксперимент](http://www.digininja.org/blog/password_experiment.php), идея которого не нова: просто взять и попросить рассказать ему свой пароль. Ему просто взяли и рассказали. Всё правильно, взламывать - для неудачников. [via @p0123n](http://github.com/p0123n)
-* Ребята под названием [Emptysquare.net](http://emptysquare.net) опубликовали [MOTOR](http://emptysquare.net/blog/introducing-motor-an-asynchronous-mongodb-driver-for-python-and-tornado/) (MOngodb + TORnado) — собственный асинхронный драйвер [MongoDb](http://www.mongodb.org/) предназначенный для использования совместно с популярным Python-фреймворком [Tornado](http://www.tornadoweb.org/). Вместе с публикацией драйвера, они также написали [статью](http://emptysquare.net/blog/motor-internals-how-i-asynchronized-a-synchronous-library/) о том, зачем и почему они сделали свой велосипед (на мой взгляд, c очень даже круглыми колёсами). [via @sitnin](http://github.com/sitnin)
+* Ребята под названием [Emptysquare.net](http://emptysquare.net) опубликовали [MOTOR](http://emptysquare.net/blog/introducing-motor-an-asynchronous-mongodb-driver-for-python-and-tornado/) (MOngodb + TORnado) — собственный асинхронный драйвер [MongoDb](http://www.mongodb.org/), предназначенный для использования совместно с популярным Python-фреймворком [Tornado](http://www.tornadoweb.org/). Вместе с публикацией драйвера они также написали [статью](http://emptysquare.net/blog/motor-internals-how-i-asynchronized-a-synchronous-library/) о том, зачем и почему они сделали свой велосипед (на мой взгляд, c очень даже круглыми колёсами). [via @sitnin](http://github.com/sitnin)
 * [Текущее положение дел в хардварных системах дополненной реальности](http://blogs.valvesoftware.com/abrash/why-you-wont-see-hard-ar-anytime-soon/) (Google Glasses, etc.). Интересная и читается легко. [via @specialforest](http://github.com/specialforest)
 
 ## На сладкое
