--- a/source/posts/2012-07-27.md
+++ b/source/posts/2012-07-27.md
@@ -33,7 +33,7 @@
 
 ## Вы нам писали
 
-* [Функциональное программирование - это гетто](http://blog.jelastic.com/2012/07/24/functional-programming-is-a-ghetto/). Ну, или башня из слоновой кости, из которой одни разработчики смотрят на дргих как на г..но. [via @amogil](http://github.com/amogil)
+* [Функциональное программирование - это гетто](http://blog.jelastic.com/2012/07/24/functional-programming-is-a-ghetto/). Ну, или башня из слоновой кости, <s>из</s> В которой одни разработчики смотрят на дргих как на г..но. [via @amogil](http://github.com/amogil)
 * [Запомнить число пи до миллионной доли очень легко](http://davidbau.com/archives/2010/03/14/the_mystery_of_355113.html). И никто до сих пор не понимает почему. *Хорошая математическая шутка. Она у меня вроде уже была, нет?* [via @amogil](http://github.com/amogil)
 * [Бесконечный спор о плюсах и минусах "гибридных" приложений для мобильных](http://www.cocoacontrols.com/posts/a-primer-on-hybrid-apps-for-ios) на примере айфона. [via @ddnv](http://github.com/ddnv)
 * [Небольшое обновление в разработке u1db.](http://packages.python.org/u1db/high-level-api.html#high-level-api) Напомню, что U1DB -- это такой универсальный API от создателей Ubuntu One, которым они заменят текущий CouchDB. К этому API затем будет добавляться различные "реализации" на различных платформах. Пока делают прототип на питоне и SQLite. Уже сейчас можно ознакомиться с документацией их API. Я лично (k-bx) вижу гигантскую проблему в отсутствии стандартных range-запросов в их модели, и попытке всё впихнуть в key-value. А вы? [via @k-bx](http://github.com/k-bx)
