--- a/source/posts/2012-07-27.md
+++ b/source/posts/2012-07-27.md
@@ -37,7 +37,7 @@
 * [Запомнить число пи до миллионной доли очень легко](http://davidbau.com/archives/2010/03/14/the_mystery_of_355113.html). И никто до сих пор не понимает почему. *Хорошая математическая шутка. Она у меня вроде уже была, нет?* [via @amogil](http://github.com/amogil)
 * [Бесконечный спор о плюсах и минусах "гибридных" приложений для мобильных](http://www.cocoacontrols.com/posts/a-primer-on-hybrid-apps-for-ios) на примере айфона. [via @ddnv](http://github.com/ddnv)
 * [Небольшое обновление в разработке u1db.](http://packages.python.org/u1db/high-level-api.html#high-level-api) Напомню, что U1DB -- это такой универсальный API от создателей Ubuntu One, которым они заменят текущий CouchDB. К этому API затем будет добавляться различные "реализации" на различных платформах. Пока делают прототип на питоне и SQLite. Уже сейчас можно ознакомиться с документацией их API. Я лично (k-bx) вижу гигантскую проблему в отсутствии стандартных range-запросов в их модели, и попытке всё впихнуть в key-value. А вы? [via @k-bx](http://github.com/k-bx)
-* Если вы ничего не слышали о [Continuous_integration](http://en.wikipedia.org/wiki/Continuous_integration), то [вот тут опубликовали](http://zeroturnaround.com/blog/zt-labs-tutorial-pragmatic-continuous-delivery-with-jenkins-nexus-and-liverebel/) неплохой материал для ознакомления. По ссылке есть небольшое видео и PDF (доступен после регистрации, [direct link](http://yadisk.cc/d/mGgANGXS00_z) для ленивых) [via @melonamin](http://github.com/melonamin)
+* Если вы ничего не слышали о [сontinuous integration](http://en.wikipedia.org/wiki/Continuous_integration), то [вот тут опубликовали](http://zeroturnaround.com/blog/zt-labs-tutorial-pragmatic-continuous-delivery-with-jenkins-nexus-and-liverebel/) неплохой материал для ознакомления. По ссылке есть небольшое видео и PDF (доступен после регистрации, [direct link](http://yadisk.cc/d/mGgANGXS00_z) для ленивых) [via @melonamin](http://github.com/melonamin)
 * [Доступен для скачивания](http://tfspreview.com) preview TFS - набор инструментов для [управления жизненным циклом ПО](http://en.wikipedia.org/wiki/Application_lifecycle_management) от Microsoft. Из коробки TFS позволяет делать deployment Azure, но что делать если вы используете Amazon EC2? Подробный how-to по [ссылке](http://octopusdeploy.com/blog/automated-deployment-with-tfspreview-octopack-myget) [via @melonamin](http://github.com/melonamin)
 * Как на самом деле должны были быть сделаны Reminders в iOS - [Checkmark](http://www.macstories.net/reviews/checkmark-review/) А для Android есть что нибудь похожее? [via @melonamin](http://github.com/melonamin)
 * Автор популярных среди гиков [комиксов XKCD](http://xkcd.com) начал вести блог в котором отвечает на вопросы читателей сформулированных в формате "А что если...". Первый пост про [релятивисткий бейсбол](http://what-if.xkcd.com/1/), формат непривычен, но получилось отлично. [via @melonamin](http://github.com/melonamin)
