--- a/source/posts/2012-07-27.md
+++ b/source/posts/2012-07-27.md
@@ -26,7 +26,7 @@
 ## Свежее, но моё
 * [Google запустил Fiber + TV](http://fiber.google.com/), в одном единственном городе - Канзасе. Идея простая - 5мбит интернета *бесплатно*, гигабит за 70 долларов в месяц, гигабит плюс гуглтв с кучей каналов - 120 долларов. Это микрореволюция в плане цен, конечно, но совсем не фунт изюма. Что-то подобное они пытались уже делать у себя в Горновидске. #google #fiber
 * [Google запустил 3d карты в штатах](http://google-latlong.blogspot.com/2012/07/3d-imagery-now-available-on-ipad-and.html). Пока только в рамках Google Earth, но тем не менее. Забавно, что всё же успели раньше эппла. #google #maps
-* [Видимо в связи с этим сегодня 5 часов лежал google talk](http://techpp.com/2012/07/26/google-talk-goes-down-suffers-outage-across-the-world/). Без коментариев. #gtalk #google #fail
+* [Видимо в связи с этим сегодня 5 часов лежал google talk](http://techpp.com/2012/07/26/google-talk-goes-down-suffers-outage-across-the-world/). Без комментариев. #gtalk #google #fail
 * [Твиттер прилег и пролежал час](http://www.theverge.com/2012/7/26/3188693/twitter-experiencing-issues). Официальных причин нет. Но неофициально, я вам и так скажу - выкатывали новую версию. На мобильный твиттер раскатилось, на остальной пришлось откатить обратно. Ну, как минимум такие следы я нашел. #twitter #fail
 * [Чуваки из Нюанса нашли еще одно применение](http://arstechnica.com/information-technology/2012/07/dragon-pc-software-now-lets-your-voice-control-gmail-and-hotmail/) - специальный сайдбар, позволяющий управлять почтой. Конечно не всей, только gmail и hotmail, но это всё равно круто. #voice #gmail #hotmail
 * Кстати о почте - [AOL обновил почту](http://thenextweb.com/insider/2012/07/26/aol-mail-gets-a-refresh-would-like-to-add-you-as-one-of-its-24m-monthly-active-users/) первый раз за 5 лет. Причем обновление отличное, очень рекомендую всем на него посмотреть. Мне *местами* нравится даже больше новой яндекс.почты, которую вы еще не видели :) #aol #mail
