--- a/source/posts/2012-07-27.md
+++ b/source/posts/2012-07-27.md
@@ -1,23 +1,23 @@
 # Возвращение технологий Ньютона
 
-Сначала я тут написал другую тему дня. Но, внезапно для меня, случился другой анонс, и вот, я пишу для вас новый текст. Сегодня гугл начал распознавать рукописный ввод на мобильных и планшетах. Технологии, которые я первый раз увидел в 1995ом году в [Apple Newton Message pad](http://ru.wikipedia.org/wiki/Apple_Newton) вернулись, причем так, как мне и хотелось.
+Сначала я тут написал другую тему дня. Но, внезапно для меня, случился другой анонс, и вот, я пишу для вас новый текст. Сегодня гугл начал распознавать рукописный ввод на мобильных и планшетах. Технологии, которые я первый раз увидел в 1995 году в [Apple Newton Message pad](http://ru.wikipedia.org/wiki/Apple_Newton) вернулись, причём так, как мне и хотелось.
 
 ![center](http://guy.com/a/wp-content/uploads/2011/06/apple-newton.jpg)
 
 Краткая инструкция:
 
 1. Открываем **на мобильном** сайт http://google.com.
-2. Нажимаем на шестеренку настроек, выбираем «Настройки поиска».
-3. Ищем «Рукописный ввод» (в английском интерфейсе Handwriting) и включаем его.
-4. Возвращаемся на гугл и начинаем пальцем по экрану писать слово из трех букв.
+2. Нажимаем на шестерёнку настроек, выбираем «Настройки поиска».
+3. Ищем «Рукописный ввод» (в английском интерфейсе - «Handwriting») и включаем его.
+4. Возвращаемся на гугл и начинаем пальцем по экрану писать слово из трёх букв.
 5. …
 6. <s>Профит</s> онемение от восхищения.
 
-Для ленивых [есть рекламный видеоролик](http://www.youtube.com/watch?v=uyeJXKfAcpc), но он очень рекламный, имейте ввиду. Казалось бы, такая простая ерунда, но для меня это очень крутая маркетинговая штука.
+Для ленивых [есть рекламный видеоролик](http://www.youtube.com/watch?v=uyeJXKfAcpc), но он очень рекламный, имейте в виду. Казалось бы, такая простая ерунда, но для меня это очень крутая маркетинговая штука.
 
-Почему я говорю, что это маркетинг? Потому, что это офигенный образец *простой* технологии, которая создает нереальный вау-эффект, но совершенно бесполезна пользователю.
+Почему я говорю, что это маркетинг? Потому, что это офигенный образец *простой* технологии, которая создаёт нереальный вау-эффект, но совершенно бесполезна пользователю.
 
-А еще, для меня это «у гугла ачивка». Гугл на моих глазах получил медальку «за использование *всех* средств ввода». Даже распознавание образов. Правда только в Goggles, но тем не менее.
+А ещё для меня это - «у гугла ачивка». Гугл на моих глазах получил медальку «за использование *всех* средств ввода». Даже распознавание образов. Правда, только в Goggles, но тем не менее.
 
 В общем, для меня этот запуск гораздо важнее, чем смешной [Google Fiber](http://fiber.google.com/).
 
@@ -26,21 +26,21 @@
 ## Свежее, но моё
 * [Google запустил Fiber + TV](http://fiber.google.com/), в одном единственном городе - Канзасе. Идея простая - 5мбит интернета *бесплатно*, гигабит за 70 долларов в месяц, гигабит плюс гуглтв с кучей каналов - 120 долларов. Это микрореволюция в плане цен, конечно, но совсем не фунт изюма. Что-то подобное они пытались уже делать у себя в Горновидске. #google #fiber
 * [Google запустил 3d карты в штатах](http://google-latlong.blogspot.com/2012/07/3d-imagery-now-available-on-ipad-and.html). Пока только в рамках Google Earth, но тем не менее. Забавно, что всё же успели раньше эппла. #google #maps
-* [Видимо в связи с этим сегодня 5 часов лежал google talk](http://techpp.com/2012/07/26/google-talk-goes-down-suffers-outage-across-the-world/). Без коментариев. #gtalk #google #fail
-* [Твиттер прилег и пролежал час](http://www.theverge.com/2012/7/26/3188693/twitter-experiencing-issues). Официальных причин нет. Но неофициально, я вам и так скажу - выкатывали новую версию. На мобильный твиттер раскатилось, на остальной пришлось откатить обратно. Ну, как минимум такие следы я нашел. #twitter #fail
-* [Чуваки из Нюанса нашли еще одно применение](http://arstechnica.com/information-technology/2012/07/dragon-pc-software-now-lets-your-voice-control-gmail-and-hotmail/) - специальный сайдбар, позволяющий управлять почтой. Конечно не всей, только gmail и hotmail, но это всё равно круто. #voice #gmail #hotmail
-* Кстати о почте - [AOL обновил почту](http://thenextweb.com/insider/2012/07/26/aol-mail-gets-a-refresh-would-like-to-add-you-as-one-of-its-24m-monthly-active-users/) первый раз за 5 лет. Причем обновление отличное, очень рекомендую всем на него посмотреть. Мне *местами* нравится даже больше новой яндекс.почты, которую вы еще не видели :) #aol #mail
+* [Видимо, в связи с этим сегодня 5 часов лежал google talk](http://techpp.com/2012/07/26/google-talk-goes-down-suffers-outage-across-the-world/). Без коментариев. #gtalk #google #fail
+* [Твиттер прилёг и пролежал час](http://www.theverge.com/2012/7/26/3188693/twitter-experiencing-issues). Официальных причин нет. Но неофициально, я вам и так скажу - выкатывали новую версию. На мобильный твиттер раскатилось, на остальной пришлось откатить обратно. Ну, как минимум, такие следы я нашел. #twitter #fail
+* [Чуваки из Нюанса нашли ещё одно применение](http://arstechnica.com/information-technology/2012/07/dragon-pc-software-now-lets-your-voice-control-gmail-and-hotmail/) - специальный сайдбар, позволяющий управлять почтой. Конечно не всей, только gmail и hotmail, но это всё равно круто. #voice #gmail #hotmail
+* Кстати, о почте - [AOL обновил почту](http://thenextweb.com/insider/2012/07/26/aol-mail-gets-a-refresh-would-like-to-add-you-as-one-of-its-24m-monthly-active-users/) первый раз за 5 лет. Причём обновление отличное, очень рекомендую всем на него посмотреть. Мне *местами* нравится даже больше новой яндекс.почты, которую вы еще не видели :) #aol #mail
 
 ## Вы нам писали
 
-* [Функциональное программирование - это гетто](http://blog.jelastic.com/2012/07/24/functional-programming-is-a-ghetto/). Ну, или башня из слоновой кости, <s>из</s> В которой одни разработчики смотрят на других как на г..но. [via @amogil](http://github.com/amogil)
-* [Запомнить число пи до миллионной доли очень легко](http://davidbau.com/archives/2010/03/14/the_mystery_of_355113.html). И никто до сих пор не понимает почему. *Хорошая математическая шутка. Она у меня вроде уже была, нет?* [via @amogil](http://github.com/amogil)
+* [Функциональное программирование - это гетто](http://blog.jelastic.com/2012/07/24/functional-programming-is-a-ghetto/). Ну, или башня из слоновой кости, <s>из</s> в которой одни разработчики смотрят на других как на г..но. [via @amogil](http://github.com/amogil)
+* [Запомнить число пи до миллионной доли очень легко](http://davidbau.com/archives/2010/03/14/the_mystery_of_355113.html). И никто до сих пор не понимает, почему. *Хорошая математическая шутка. Она у меня, вроде, уже была, нет?* [via @amogil](http://github.com/amogil)
 * [Бесконечный спор о плюсах и минусах "гибридных" приложений для мобильных](http://www.cocoacontrols.com/posts/a-primer-on-hybrid-apps-for-ios) на примере айфона. [via @ddnv](http://github.com/ddnv)
-* [Небольшое обновление в разработке u1db.](http://packages.python.org/u1db/high-level-api.html#high-level-api) Напомню, что U1DB -- это такой универсальный API от создателей Ubuntu One, которым они заменят текущий CouchDB. К этому API затем будет добавляться различные "реализации" на различных платформах. Пока делают прототип на питоне и SQLite. Уже сейчас можно ознакомиться с документацией их API. Я лично (k-bx) вижу гигантскую проблему в отсутствии стандартных range-запросов в их модели, и попытке всё впихнуть в key-value. А вы? [via @k-bx](http://github.com/k-bx)
+* [Небольшое обновление в разработке u1db.](http://packages.python.org/u1db/high-level-api.html#high-level-api) Напомню, что U1DB -- это такой универсальный API от создателей Ubuntu One, которым они заменят текущий CouchDB. К этому API затем будет добавляться различные "реализации" на различных платформах. Пока делают прототип на питоне и SQLite. Уже сейчас можно ознакомиться с документацией их API. Я лично [@k-bx] вижу гигантскую проблему в отсутствии стандартных range-запросов в их модели, и попытке всё впихнуть в key-value. А вы? [via @k-bx](http://github.com/k-bx)
 * Если вы ничего не слышали о [Continuous_integration](http://en.wikipedia.org/wiki/Continuous_integration), то [вот тут опубликовали](http://zeroturnaround.com/blog/zt-labs-tutorial-pragmatic-continuous-delivery-with-jenkins-nexus-and-liverebel/) неплохой материал для ознакомления. По ссылке есть небольшое видео и PDF (доступен после регистрации, [direct link](http://yadisk.cc/d/mGgANGXS00_z) для ленивых) [via @melonamin](http://github.com/melonamin)
 * [Доступен для скачивания](http://tfspreview.com) preview TFS - набор инструментов для [управления жизненным циклом ПО](http://en.wikipedia.org/wiki/Application_lifecycle_management) от Microsoft. Из коробки TFS позволяет делать deployment Azure, но что делать если вы используете Amazon EC2? Подробный how-to по [ссылке](http://octopusdeploy.com/blog/automated-deployment-with-tfspreview-octopack-myget) [via @melonamin](http://github.com/melonamin)
 * Как на самом деле должны были быть сделаны Reminders в iOS - [Checkmark](http://www.macstories.net/reviews/checkmark-review/) А для Android есть что нибудь похожее? [via @melonamin](http://github.com/melonamin)
-* Автор популярных среди гиков [комиксов XKCD](http://xkcd.com) начал вести блог в котором отвечает на вопросы читателей сформулированных в формате "А что если...". Первый пост про [релятивисткий бейсбол](http://what-if.xkcd.com/1/), формат непривычен, но получилось отлично. [via @melonamin](http://github.com/melonamin)
+* Автор популярных среди гиков [комиксов XKCD](http://xkcd.com) начал вести блог, в котором отвечает на вопросы читателей, сформулированных в формате "А что если...". Первый пост про [релятивисткий бейсбол](http://what-if.xkcd.com/1/), формат непривычен, но получилось отлично. [via @melonamin](http://github.com/melonamin)
 * Microsoft [выпустила в Open Source](http://weblogs.asp.net/scottgu/archive/2012/07/19/entity-framework-and-open-source.aspx) свой Entity Framework. Всё выложено на [entityframework.codeplex.com](http://entityframework.codeplex.com/), и они используют Git! Ничто человеческое им не чуждо :) #microsoft #opensource [via @mikola](http://github.com/mikola)
 * Статья о том, что [спать надо](http://blogs.hbr.org/schwartz/2012/07/the-secret-to-high-performance.html), иначе вам будет сложно выполнять свою работу. Тема, конечно, не новая, и мы все уже много раз об этом читали и слышали. Всё же стоит ещё раз об этом вспомнить и, может быть, хотя бы сегодня лечь вовремя :) #health [via @mikola](http://github.com/mikola)
 * Разработчик из компании Mozilla и 24-летний исследователь безопасности [нашли уязвимость](http://www.forbes.com/sites/andygreenberg/2012/07/23/hacker-will-expose-potential-security-flaw-in-more-than-four-million-hotel-room-keycard-locks/) в замках Onity, которые устанавливают на двери номеров в отелях. Разработанный ими аппарат (менее, чем за 50$, на основе Arduino) способен открывать такие двери. [Слайды](http://demoseen.com/bhtalk2.pdf). [via @p0123n](http://github.com/p0123n)
