--- a/source/posts/2012-07-31.md
+++ b/source/posts/2012-07-31.md
@@ -2,19 +2,19 @@
 
 Зайду издалека: я вчера внезапно уснул. В руках у меня был iPad и я внезапно уснул. Знаете, если iPad держать в руках во сне - это довольно увесистая штука с неприятно острыми углами. В общем, проснувшись, я вспомнил все слухи на тему айпада на 7 дюймов и возжелал.
 
-А между тем, кажется, для появления такого айпада есть все предпосылки. Мало того, что это прекрасная возможность вступить в прямую конфронтацию с Гуглом. Это еще и шанс хорошо насолить Samsung, главному продавцу устройств этого форм-фактора. А так же наступить на горло лебединой песне Amazon, чей Kindle Fire тоже довольно успешен.
+А между тем, кажется, для появления такого айпада есть все предпосылки. Мало того, что это прекрасная возможность вступить в прямую конфронтацию с Гуглом. Это еще и шанс хорошо насолить Samsung, главному продавцу устройств этого форм-фактора. А также наступить на горло лебединой песне Amazon, чей Kindle Fire тоже довольно успешен.
 
 Масса эппло-фанатов по всему миру находит множество намеков на возможное появление этого устройства. Вот, например, Крис Тейлор из мэшбл нашел чисто арифметическое доказательство:
 
 ![center](http://8.mshcdn.com/wp-content/uploads/2012/07/Apple-Price-Points.png)
 
-Как видите, в нижней пирамидке цен явно не хватает целого сегмента, который, мне хочется верить, отведен специально для iPad mini. Вообще надо все «нетелефоны» эппл собрать в одну цепочку. New iPad, iPad mini, iPad nano (нынешний iPod Touch), iPad pico (нынешний iPod nano). Не хватает только iPad Table и, скажем, iPad Mega, в виде телевизора на 50 дюймов с тач интерфейсом, но это я уже замечтался.
+Как видите, в нижней пирамидке цен явно не хватает целого сегмента, который, мне хочется верить, отведён специально для iPad mini. Вообще надо все «нетелефоны» эппл собрать в одну цепочку. New iPad, iPad mini, iPad nano (нынешний iPod Touch), iPad pico (нынешний iPod nano). Не хватает только iPad Table и, скажем, iPad Mega, в виде телевизора на 50 дюймов с тач интерфейсом, но это я уже замечтался.
 
 Не переключайтесь, после минутки рекламы мы вернемся с новостями.
 
 -----
 
-<div align=center><table width=80% border=0><tr><td><img src=http://www.radio-t.com/images/rt-header-logo.png /></td><td width=10%>&nbsp;</td><td width=100%><h2>Радио-Т исполняется 300</h2><p>Хочу напомнить вам, что в эту субботу, в 23:00 по Москве выходит юбилейный, трехсотый выпуск <a href=http://radio-t.com/>еженедельного шоу Радио-Т</a>. Да, уже 6 лет, почти без перерывов. Не каждая эфирная передача проживает 6 лет, а мы всё еще зажигаем. Юбилейный выпуск будет больше развлекательный, чем технологический. Как настоящие хоббиты, будем раздавать много подарков онлайн-слушателям, вспоминать о былом и придаваться всяческому разнузданному веселью. Приходите. Напоминаю, 23:00 по Москве, <a href=http://www.radio-t.com/info/>о том, как присоединиться, можно прочитать на нашем сайте</a>.</p></td></tr></table></div>
+<div align=center><table width=80% border=0><tr><td><img src=http://www.radio-t.com/images/rt-header-logo.png /></td><td width=10%>&nbsp;</td><td width=100%><h2>Радио-Т исполняется 300</h2><p>Хочу напомнить вам, что в эту субботу, в 23:00 по Москве выходит юбилейный, трехсотый выпуск <a href=http://radio-t.com/>еженедельного шоу Радио-Т</a>. Да, уже 6 лет, почти без перерывов. Не каждая эфирная передача проживает 6 лет, а мы всё еще зажигаем. Юбилейный выпуск будет больше развлекательный, чем технологический. Как настоящие хоббиты, будем раздавать много подарков онлайн-слушателям, вспоминать о былом и предаваться всяческому разнузданному веселью. Приходите. Напоминаю, 23:00 по Москве; <a href=http://www.radio-t.com/info/>о том, как присоединиться, можно прочитать на нашем сайте</a>.</p></td></tr></table></div>
 
 -----
 
@@ -22,23 +22,23 @@
 * [Отличная статистика по Твиттеру](http://diegobasch.com/some-fresh-twitter-stats-as-of-july-2012). Медиана фоловеров - 1, медиана френдов - 5, а среднее - 51 для обоих. 80М аккаунтов твиттили что-то за последний месяц. В общем почитайте, очень поучительно. #twitter #stats
 * [в это же время Limited Pressing удаляет свою страницу на фейсбуке](https://www.facebook.com/limitedpressing/posts/209534972507958) и написали об этом огромный разгромный пост. Причина отличная - их статистика показала, что 80% людей, приходящих на их сайт с фейсбука, имеют выключенный Javascript. Да-да, 80% людей в фейсбуке - боты. #fb #spam
 * [А вот типичная реакция гиков на новую рекламу Apple](http://frank.is/on-apples-new-ads/). «Эппл? Что за фигня? Где унижение майкрософта? Где восхваление своего продукта?» - как бы говорят нам они. #apple #ads
-* [Между тем в Г-корпорации внедрили Hangout внутри GTalk](http://googleenterprise.blogspot.com/2012/07/video-chat-with-whole-team-with.html). Очень разумно, теперь в гуглтолке можно общаться и группами, минуя G+. Интересно, зачем же они так сделали, ведь их главная задача - накачать людей в G+? А! Да ведь оказывается теперь старого видео-чата в gtalk нет, а чтобы включить hangout надо завестись на G+. Хитрецыыыы, да? :) #gplus #gtalk
-* [Твиттер поддержал общественность и теперь кликнув по $AAPL увидишь поиск по этому слову](http://techcrunch.com/2012/07/30/twitter-clickable-ticker-symbols/). Зачем? Ну, это как хештеги, только для названий компаний, торгующихся на бирже. Их уже метко окрестили «cashtags». В общем я не понял зачем, но на всякий случай негодую! #twitter #tags
-* [На zdnet советуют, забейте на Win8, потому что Win7 будет поддерживаться до 2020года!](http://www.zdnet.com/how-to-skip-windows-8-and-continue-using-windows-7-7000001734/). Хороший пойнт, как-то я об этом не думал. Интересно, насколько подобный срок поддержки стесняет инновации в майкрософте? #win8 #win7
+* [Между тем в Г-корпорации внедрили Hangout внутри GTalk](http://googleenterprise.blogspot.com/2012/07/video-chat-with-whole-team-with.html). Очень разумно, теперь в гуглтолке можно общаться и группами, минуя G+. Интересно, зачем же они так сделали, ведь их главная задача - накачать людей в G+? А! Да ведь, оказывается, теперь старого видео-чата в gtalk нет, а чтобы включить hangout, надо завестись на G+. Хитрецыыыы, да? :) #gplus #gtalk
+* [Твиттер поддержал общественность и теперь, кликнув по $AAPL, увидишь поиск по этому слову](http://techcrunch.com/2012/07/30/twitter-clickable-ticker-symbols/). Зачем? Ну, это как хештеги, только для названий компаний, торгующихся на бирже. Их уже метко окрестили «cashtags». В общем я не понял зачем, но на всякий случай негодую! #twitter #tags
+* [На zdnet советуют - забейте на Win8, потому что Win7 будет поддерживаться до 2020 года!](http://www.zdnet.com/how-to-skip-windows-8-and-continue-using-windows-7-7000001734/). Хороший пойнт, как-то я об этом не думал. Интересно, насколько подобный срок поддержки стесняет инновации в майкрософте? #win8 #win7
 * Я большой фанат SecondScreen технологий, [очень рекомендую вам посмотреть на свежий релиз](http://techcrunch.com/2012/07/30/intonow-update-tv-screen-captures/) проекта [IntoNow](http://www.intonow.com/ci). Это такое приложение для iPad и американского телевизора. Вот оно, настоящее будущее телевидения. #ss #intonow #yahoo
-* [Кстати, Росс Левинзон, бывший директор Yahoo покидает компанию](http://finance.yahoo.com/news/interim-yahoo-ceo-ross-levinsohn-220159342.html). Это было ожидаемо, конечно. #yahoo #marissa
-* [Историческая реликвия, письмо Якоба Нильсена о том, почему Яху хорош, но может стать и хуже](http://www.useit.com/alertbox/981101.html). Прочитайте, очень свежо звучит, хотя написано 1го ноября 1998. #yahoo #marissa
-* [MaShape, этакий аппстор для API](http://techcrunch.com/2012/07/30/mashape-public-launch/) наконец-то вышел из беты. Он волшебный, все *свои* API теперь буду через него раздавать. Они реализовали почти всё, что я хочу от сервисов такого плана. У них даже есть API для создания API. #api #tools
+* [Кстати, Росс Левинзон, бывший директор Yahoo, покидает компанию](http://finance.yahoo.com/news/interim-yahoo-ceo-ross-levinsohn-220159342.html). Это было ожидаемо, конечно. #yahoo #marissa
+* [Историческая реликвия, письмо Якоба Нильсена о том, почему Яху хорош, но может стать и хуже](http://www.useit.com/alertbox/981101.html). Прочитайте, очень свежо звучит, хотя написано 1 ноября 1998 года. #yahoo #marissa
+* [MaShape, этакий аппстор для API](http://techcrunch.com/2012/07/30/mashape-public-launch/), наконец-то вышел из беты. Он волшебный, все *свои* API теперь буду через него раздавать. Они реализовали почти всё, что я хочу от сервисов такого плана. У них даже есть API для создания API. #api #tools
 
 ## Для гиков
-* [О боже, Chrom(e|ium) работал с DELETE так же как с GET](http://code.google.com/p/chromium/issues/detail?can=2&start=0&num=100&q=&colspec=ID%20Pri%20Mstone%20ReleaseBlock%20OS%20Area%20Feature%20Status%20Owner%20Summary&groupby=&sort=&id=136320), т.е. если GET закешировался, то DELETE вернет результат от GET’а. Стыдоба-то какая. Вот как так получается, один из лучших браузеров, отличный кодбейз и совершенно детские ошибки иногда. #chrome #browser
+* [О боже, Chrom(e|ium) работал с DELETE так же как с GET](http://code.google.com/p/chromium/issues/detail?can=2&start=0&num=100&q=&colspec=ID%20Pri%20Mstone%20ReleaseBlock%20OS%20Area%20Feature%20Status%20Owner%20Summary&groupby=&sort=&id=136320), т. е. если GET закешировался, то DELETE вернет результат от GET’а. Стыдоба-то какая. Вот как так получается, один из лучших браузеров, отличный кодбейз и совершенно детские ошибки иногда. #chrome #browser
 * [Шаблоны проектов на Python для XCode4](https://github.com/gregneagle/Xcode4CocoaPythonTemplates). Актуально особенно для совсем нового XCode, в котором шаблоны опять переехали в другую папку. #python #pyobjc
 * [Разработчик Cheddar выложил своё приложение в opensource](https://github.com/nothingmagical/cheddar-ios) прямо на гитхабе. Очень интересно будет покопаться, не так уж много хороших приложений для iOS есть в опенсорсе. #ios #code
-* [Ребята из Intuit рассказали как они управляются со своей кодовой базой](http://www.drdobbs.com/tools/building-quickbooks-how-intuit-manages-1/240003694). Ну, что можно сказать, не такой уж большой у них объем кода видимо. #intuit #code
-* [Дорогие PHPсты, для вас в CodeAcademy открылись курсы по Python](http://www.codecademy.com/tracks/python). Ну ладно, ладно, курсы открылись для всех. Но факт есть факт - открылись, приходите посмотреть. #python #learn
-* [и для вас же, на MSDN отличные курсы по html5/css3 для начинающих](http://channel9.msdn.com/Series/HTML5-CSS3-Fundamentals-Development-for-Absolute-Beginners). Нет, правда отличные, правда в видео формате и на английском. #video #html #learn
+* [Ребята из Intuit рассказали, как они управляются со своей кодовой базой](http://www.drdobbs.com/tools/building-quickbooks-how-intuit-manages-1/240003694). Ну, что можно сказать, не такой уж большой у них объём кода, видимо. #intuit #code
+* [Дорогие PHP-сты, для вас в CodeAcademy открылись курсы по Python](http://www.codecademy.com/tracks/python). Ну ладно, ладно, курсы открылись для всех. Но факт есть факт - открылись, приходите посмотреть. #python #learn
+* [И для вас же на MSDN - отличные курсы по html5/css3 для начинающих](http://channel9.msdn.com/Series/HTML5-CSS3-Fundamentals-Development-for-Absolute-Beginners). Нет, правда отличные; правда, в видеоформате и на английском. #video #html #learn
 * [OMG! StreetView в текстовом режиме](http://tllabs.io/asciistreetview/)! Просто демо, WebGl, на текстурках рисуется ascii-графикой стритвью. Красотааааа… #gmaps #fun
-* [Так что, nginx устарел, у нас теперь есть CloudFront](http://www.peterbe.com/plog/is-nginx-obsolete-amazon-cloudfront), вопрошает Питер Бенгтссон. А мне кажется это чушь собачья. Ну, т.е. да, на EC2 нет смысла поднимать nginx, во всех остальных случаях без него точно не обойтись. Кажется автор типичный nginx-hater. #nginx #code
+* [Так что, nginx устарел, у нас теперь есть CloudFront](http://www.peterbe.com/plog/is-nginx-obsolete-amazon-cloudfront), вопрошает Питер Бенгтссон. А мне кажется, это чушь собачья. Ну, т. е. да, на EC2 нет смысла поднимать nginx, во всех остальных случаях без него точно не обойтись. Кажется, автор типичный nginx-hater. #nginx #code
 * [Для тех, кто с Монгой: edda, визуализатор логов](http://blog.mongodb.org/post/28053108398/edda-a-log-visualizer-for-mongodb). Умеет отлично показывать конфигурацию серверов по логам. Ну, примерно как гадалка по руке. #mongo #edda
 * [40 полезных скриптов и команд для OSX](http://www.leftcolumn.net/2009/02/15/40-useful-mac-os-x-shell-scripts-and-terminal-commands/). Хорошее дополнение к скрипту [OSX для настоящих хакеров](https://github.com/mathiasbynens/dotfiles/blob/master/.osx). Попало в эту категорию случайно, очень уж мало сегодня новостей для настоящих гиков. #osx #console
 
