--- a/source/posts/2012-07-31.md
+++ b/source/posts/2012-07-31.md
@@ -20,7 +20,7 @@
 
 ## Для всех
 * [Отличная статистика по Твиттеру](http://diegobasch.com/some-fresh-twitter-stats-as-of-july-2012). Медиана фоловеров - 1, медиана френдов - 5, а среднее - 51 для обоих. 80М аккаунтов твиттили что-то за последний месяц. В общем почитайте, очень поучительно. #twitter #stats
-* [В это же время Limited Pressing удаляет свою страницу на фейсбуке](https://www.facebook.com/limitedpressing/posts/209534972507958) и написали об этом огромный разгромный пост. Причина отличная - их статистика показала, что 80% людей, приходящих на их сайт с фейсбука, имеют выключенный Javascript. Да-да, 80% людей в фейсбуке - боты. #fb #spam
+* [В это же время Limited Pressing удаляет свою страницу на фейсбуке](https://www.facebook.com/limitedpressing/posts/209534972507958) и пишет об этом огромный разгромный пост. Причина отличная - их статистика показала, что 80% людей, приходящих на их сайт с фейсбука, имеют выключенный Javascript. Да-да, 80% людей в фейсбуке - боты. #fb #spam
 * [А вот типичная реакция гиков на новую рекламу Apple](http://frank.is/on-apples-new-ads/). «Эппл? Что за фигня? Где унижение майкрософта? Где восхваление своего продукта?» - как бы говорят нам они. #apple #ads
 * [Между тем в Г-корпорации внедрили Hangout внутри GTalk](http://googleenterprise.blogspot.com/2012/07/video-chat-with-whole-team-with.html). Очень разумно, теперь в гуглтолке можно общаться и группами, минуя G+. Интересно, зачем же они так сделали, ведь их главная задача - накачать людей в G+? А! Да ведь, оказывается, теперь старого видео-чата в gtalk нет, а чтобы включить hangout, надо завестись на G+. Хитрецыыыы, да? :) #gplus #gtalk
 * [Твиттер поддержал общественность и теперь, кликнув по $AAPL, увидишь поиск по этому слову](http://techcrunch.com/2012/07/30/twitter-clickable-ticker-symbols/). Зачем? Ну, это как хештеги, только для названий компаний, торгующихся на бирже. Их уже метко окрестили «cashtags». В общем я не понял зачем, но на всякий случай негодую! #twitter #tags
