--- a/source/posts/2012-07-31.md
+++ b/source/posts/2012-07-31.md
@@ -14,7 +14,19 @@
 
 -----
 
-<div align=center><table width=80% border=0><tr><td><img src=http://www.radio-t.com/images/rt-header-logo.png /></td><td width=10%>&nbsp;</td><td width=100%><h2>Радио-Т исполняется 300</h2><p>Хочу напомнить вам, что в эту субботу, в 23:00 по Москве выходит юбилейный, трехсотый выпуск <a href=http://radio-t.com/>еженедельного шоу Радио-Т</a>. Да, уже 6 лет, почти без перерывов. Не каждая эфирная передача проживает 6 лет, а мы всё еще зажигаем. Юбилейный выпуск будет больше развлекательный, чем технологический. Как настоящие хоббиты, будем раздавать много подарков онлайн-слушателям, вспоминать о былом и предаваться всяческому разнузданному веселью. Приходите. Напоминаю, 23:00 по Москве; <a href=http://www.radio-t.com/info/>о том, как присоединиться, можно прочитать на нашем сайте</a>.</p></td></tr></table></div>
+<div align=center>
+<table width=80% border=0>
+<tr>
+<td width=20%><img src=http://www.radio-t.com/images/rt-header-logo.png /></td>
+<td width="10px">&nbsp;</td>
+<td><h2>Радио-Т исполняется 300</h2><p>Хочу напомнить вам, что в эту субботу, в 23:00 по Москве выходит 
+юбилейный, трехсотый выпуск <a href=http://radio-t.com/>еженедельного шоу Радио-Т</a>. Да, уже 6 лет, почти без 
+перерывов. Не каждая эфирная передача проживает 6 лет, а мы всё еще зажигаем. Юбилейный выпуск будет больше 
+развлекательный, чем технологический. Как настоящие хоббиты, будем раздавать много подарков онлайн-слушателям, 
+вспоминать о былом и предаваться всяческому разнузданному веселью. Приходите. Напоминаю, 23:00 по Москве; 
+<a href=http://www.radio-t.com/info/>о том, как присоединиться, можно прочитать на нашем сайте</a>.</p></td>
+</tr>
+</table></div>
 
 -----
 
