+http:// иначе ссылка убивается

--- a/source/posts/2012-08-01.md
+++ b/source/posts/2012-08-01.md
@@ -49,7 +49,7 @@
 * [Ох. В федоре тоже решили сделать свой форк Gnome2](http://fedoraproject.org/wiki/Features/MATE-Desktop). Называется MATE Desktop. Причина та же, что и у остальных - Gnome3 слишком радикальный. #gnome #linux
 * [Чуваки решили проверить, можно ли реплицировать Redis между Rackspace и EC2](http://3scale.github.com/2012/07/25/fun-with-redis-replication/). Самое интересное - у них получилось! Уперлись в сеть, причем в пропускную способность, а не в латенси, как я подумал. #redis #DC
 * [Prism.js - очередной syntax highlighter на джаваскрипте](http://prismjs.com/). Я уже не помню, шестой или седьмой по счету? Зачем их столько, они же все примерно одинаковые. Велосипедизм неистребим? #javascript #html
-* [Просто установить Linux на компьютеры с Win8 не удастся](www.itworld.com/software/287946/there-will-be-no-easy-way-install-linux-windows-8-pcs). Да, из-за UEFI, подписанных бинарников и тп. То, о чем Линус говорил 5 лет назад, кажется началось. #linux #uefi
+* [Просто установить Linux на компьютеры с Win8 не удастся](http://www.itworld.com/software/287946/there-will-be-no-easy-way-install-linux-windows-8-pcs). Да, из-за UEFI, подписанных бинарников и тп. То, о чем Линус говорил 5 лет назад, кажется началось. #linux #uefi
 * [О боже, коммандлайновый интерфейс для Фейсбука!](http://fbcmd.dtompkins.com/). Для настоящих извращенцев. Написано на php. Еще бы им cacalib подключить, чтобы картинки в консоли смотреть! #perevsion #fb
 
 ## Разное
