--- a/source/posts/2012-08-02.md
+++ b/source/posts/2012-08-02.md
@@ -16,11 +16,19 @@
 
 ## Для всех
 * [Gizmodo собрал ВСЕ слухи об iPhone6 на сегодняшний день](http://gizmodo.com/5930100/apples-next-iphone-the-complete-rumor-roundup). У меня на новый телефон уже деньги отложены. На 3 телефона. И не потому что я маньяк, нет, а потому, что андроид мне ненравится больше, чем iOS. #iphone
+* [На арстекника выложили новую статистику](http://arstechnica.com/information-technology/2012/08/firefox-continues-to-gain-as-internet-explorer-chrome-slide/). Фаерфокс отжался и потихоньку откусывает долю Хрома в мире. Это очень хорошо! #ff #browser
 * [Амазон, вслед за Kindle for iOS, выпустило Instant Video](http://allthingsd.com/20120801/amazon-brings-its-videos-to-the-ipad/). Теперь всё, что ты купил на Амазоне в видеоформате, можно смотреть на айпаде и айфоне. #ios #amazon
 * [Quora начала показывать тех, кто прочитал пост](http://allthingsd.com/20120801/quora-will-now-publicly-show-who-has-read-a-post/). Странное действие, теперь я трижды подумаю, прежде чем открывать ссылки с quora. Не люблю публичную слежку. #quora #fail
 * [10 вещей, которые нужно сделать стартапу, прежде чем искать фонды](http://www.vccafe.com/2012/07/30/fundraising-recommendations-for-startups-part-i/). Я бы сказал, что ни один из этих пунктов не касается русских стартапов. Хотя нет, пожалуй, видео ролик снимите, это полезно, почти всегда. #startup
 * [AppAide - недоальтернатива топу аппстора, показывающая топ популярности приложений по их использованию](http://techcrunch.com/2012/08/01/appaide/). Вообще, идея простая и гениальная. Конечно usage горазо важнее, чем количество покупок. К сожалению, информация собирается только с устройств, на которых установлен (и один раз запущен) AppAide, так что точность пока смешная.  #appstore #ios
+* [ReadItLater, который теперь Pocket, отказался от экстеншнов к браузерам в пользу букмарклетов](http://thenextweb.com/apps/2012/08/02/read-later-service-pocket-drops-safari-extension-chrome-web-app-updates-bookmarklet-with-list-view/). Интересно, что же скажут пользователи? Я бы на их месте обиделся. #pocket #browser
 
 ## Для гиков
 * [Хорошо работающая «в стиле пинбоарда» сетка на jQuery](http://gridster.net/). Мне понравилось что она обновляется налету. И работает быстрее чем всё, что я видел. #jquery #html
 * [Многие вещи я нахожу поздно. Вот и сейчас - ImageOptim, приложение, находящее оптимальный уровень сжатия для картинок](http://imageoptim.com/). На моих тестах позволило сократить картинки вдвое, что меня более чем устраивает :) #png #jpen #optimize
+* [Твиттер продолжает радовать, выложили в опенсорс библиотеку для локализации Ruby-приложений](http://thenextweb.com/dd/2012/08/01/twittercldr-makes-it-easier-for-ruby-developers-to-build-internationally-accessible-services/). Глядя на некоторые примеры хочется опять писать на Ruby. Но потом я вспоминаю суровую реальность… #ruby #twitter #l10n
+* [Всегда интересовался, как делать транзишны с углами не в 90 градусов](http://generatedcontent.org/post/26407228072/split-feature). Оказывается совсем просто, очень хороший туториал. Вообще, лучший для меня туториал, это когда минимум слов, максимум хорошего, читаемого кода. #css #html #code
+* [О боже. Чудеса господни!](http://code.google.com/p/corkami/downloads/detail?name=CorkaMIX.zip). Один и тот же бинарник одновременно: исполняемый Windows PE, валидный .PDF файл, валидный HTML файл, исполняемый JAR и питон-скрипт. #perverts #fun
+* [В MIT придумали новый визуальный язык для графических процедур](http://people.csail.mit.edu/jrk/halide12/). Говоря чуть проще -это что-то вроде адобскрипта в фотошопе, только визуально и удобнее.
+
+*Тихий день, с новостями не густо. Дополняйте?*
