--- a/source/posts/2012-08-03.md
+++ b/source/posts/2012-08-03.md
@@ -28,7 +28,7 @@
 * [Быстро - не значит грязно.](http://me.veekun.com/blog/2012/07/28/quick-doesnt-mean-dirty/). Некто [@eevee](https://twitter.com/eevee), недавно прославившийся знатным набросом [PHP — фрактал плохого дизайна](http://me.veekun.com/blog/2012/04/09/php-a-fractal-of-bad-design/), отвечает Техкранчу на то, что [«да, на PHP часто пишут грязный код, зато это можно сделать очень быстро»](http://techcrunch.com/2012/07/28/not-that-kind-of-filthy-get-your-mind-out-of-the-gutter/). «Хорошо», — говорит он, и практически в прямом эфире пишет гостевую книгу на Питоне. Быстро и чисто. [via @voxpuibr](http://github.com/voxpuibr)
 * [OAuth 2.0 and the Road to Hell.](http://hueniverse.com/2012/07/oauth-2-0-and-the-road-to-hell/). О том, почему человек, потративший 3 года на разработку спецификации OAuth2 разочаровался настолько, что даже вычеркнул своё имя из спецификации. [via @k-bx](http://github.com/k-bx)
 * [Топ десять](http://lifehacker.com/5928950/top-10-secret-features-of-os-x-mountain-lion) неочевидных собенностей Mountain Lion. [via @monory](http://github.com/monory)
-* На хабре опубликована отличная [http://habrahabr.ru/post/122445/](памятка пользователям ssh). Узнал новое. Однозначно, в закладки. В статье описаны продвинутые функций OpenSSH, которые позволяют сильно упростить жизнь системным администраторам и программистам, которые не боятся шелла. В отличие от большинства руководств, которые кроме ключей и -L/D/R опций ничего не описывают, я попытался собрать все интересные фичи и удобства, которые с собой несёт ssh. [via @sitnin](http://github.com/sitnin)
+* На хабре опубликована отличная [памятка пользователям ssh](http://habrahabr.ru/post/122445/). Узнал новое. Однозначно, в закладки. В статье описаны продвинутые функций OpenSSH, которые позволяют сильно упростить жизнь системным администраторам и программистам, которые не боятся шелла. В отличие от большинства руководств, которые кроме ключей и -L/D/R опций ничего не описывают, я попытался собрать все интересные фичи и удобства, которые с собой несёт ssh. [via @sitnin](http://github.com/sitnin)
 * ¿Так ли случаен случайный режим в iTunes?, [задаются вопросом](http://apple.stackexchange.com/questions/23194/why-isnt-itunes-shuffle-random) на StackExchange. Короткий ответ: да, случаен, но список перетасовывается один раз после нажатия кнопки «Shuffle» [via @voldmar](http://github.com/voldmar)
 * На DaylyJS две статьи про внутренности Backbone.js: [про ядро](http://dailyjs.com/2012/07/19/mvstar-2/) и про [коллекции](http://dailyjs.com/2012/07/26/mvstar-3/)  [via @voldmar](http://github.com/voldmar)
 * [Коммандная строка](http://andymatthews.net/read/2012/07/24/Command-line-tools-for-the-novice) для новичков. Хотя правильнее назвать статью «Что надо поставить для комфортной работы в командной строке».  [via @voldmar](http://github.com/voldmar)
